# TextSnatcher

./: .gitignore  README.md  com.github.rajsolai.textsnatcher-tray.desktop  meson.build  run_with_tray.sh  run_with_tray_support.sh  start-with-tray.sh  textsnatcher-tray.desktop  textsnatcher-with-tray.desktop
openspec/: project.md
openspec/changes/add-bilingual-ocr-and-tray-specs/: proposal.md  tasks.md
openspec/changes/autodetect-system-language-default/: proposal.md  tasks.md
openspec/changes/enable-hybrid-russian-english-ocr/: design.md
openspec/changes/enhance-russian-ocr-and-language-selection/: design.md
openspec/changes/fix-application-activate-duplicate-window/: proposal.md
openspec/changes/fix-file-chooser-and-clipboard/: tasks.md
openspec/changes/fix-hybrid-ocr-and-add-separate-options/: proposal.md  tasks.md
openspec/changes/fix-language-button-click-events/: design.md  proposal.md
openspec/changes/fix-tesseract-ocr-parameters/: design.md
openspec/changes/fix-tray-menu-actions/: proposal.md  tasks.md
openspec/changes/fix-tray-menu-and-file-chooser/: design.md
openspec/changes/fix-tray-screenshot-no-window-popup/: proposal.md  tasks.md
openspec/changes/fix-wayland-clipboard-detection/: design.md  (+1 more)
src/: Application.vala  MainWindow.vala  meson.build
src/components/: AboutDialog.vala  CosmicTray.vala  CosmicTray.vala.bak  HeaderBar.vala  LanguageButton.vala  SaveOptionsButton.vala  TrayIcon.vala
src/screens/: HomeScreen.vala  MainScreen.vala
src/services/: LanguageService.vala  TesseractTrigger.vala
src/utils/: Logger.vala
(+46 files in other folders)
