# Listing files to compile
sources = files (
    'Application.vala',
    'MainWindow.vala',
    'utils/Logger.vala',
    'components/VerticalBox.vala',
    'components/HeaderBar.vala',
    'components/LanguageButton.vala',
    'components/AboutButton.vala',
    'components/AboutDialog.vala',
    'components/SelectPictureDialog.vala',
    'components/SaveOptionsButton.vala',
    'components/TrayIcon.vala',
    'components/CosmicTray.vala',
    'screens/MainScreen.vala',
    'screens/HomeScreen.vala',
    'screens/SelectPictureScreen.vala',
    'services/LanguageService.vala',
    'services/TesseractTrigger.vala'
)
