# Listing files to compile
sources = files (
    'Application.vala',
    'MainWindow.vala',
    'components/HeaderBar.vala',
    'components/LanguageButton.vala',
    'components/AboutButton.vala',
    'components/AboutDialog.vala',
    'components/SaveOptionsButton.vala',
    'components/TrayIcon.vala',
    'components/CosmicTray.vala',
    'screens/MainScreen.vala',
    'screens/HomeScreen.vala',
    'screens/SelectPictureScreen.vala',
    'services/TesseractTrigger.vala'
)
